# TiM

./: .gitignore  EXAMPLE.env  README.md  build.gradle.kts  config.example.toml  settings.gradle.kts
scripts/: TiM.service  build-rust.sh  launch-script.sh
src/main/kotlin/org/elliotnash/tim/: Config.kt  PageSize.kt  Theme.kt  TiM.kt  TypstRenderer.kt
src/main/kotlin/org/elliotnash/tim/worker/: Model.kt  Worker.kt
src/main/kotlin/org/elliotnash/typst/: PageSize.kt  Renderer.kt  Theme.kt
src/main/kotlin/org/elliotnash/typst/worker/: Model.kt  Worker.kt
src/main/resources/: log4j2.xml
worker/: Cargo.toml  build.rs
worker/src/: logger.rs  main.rs  model.rs  render.rs  sandbox.rs
