[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typst = { git = "https://github.com/typst/typst", rev = "7bb4f6df44086b4c1120b227f7ae963e6c2ad5ab" }
typst-library = { git = "https://github.com/typst/typst", rev = "7bb4f6df44086b4c1120b227f7ae963e6c2ad5ab" }
comemo = "0.3"
ureq = "2.8"
ttf-parser = "0.20"
time = "0.3"
zune-inflate = "0.2"
tar = "0.4"
tiny-skia = "0.11"
no-comment = "0.0.3"
serde_json = "1.0"
serde = "1.0"
base64 = "0.21"
